--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 *.tmp
 Documents/Deliverable_1/~$wap_Deliverable_1_SRS_Template.doc
+Documents/Deliverable_1/.~lock.CSwap_Deliverable_1_SRS_Template.doc#
