--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.tmp
 Documents/Deliverable_1/~$wap_Deliverable_1_SRS_Template.doc
 Documents/Deliverable_1/.~lock.CSwap_Deliverable_1_SRS_Template.doc#
+Documents/Deliverable_1/~$CSwap_Deliverable_1_ProductBacklog_1.xlsx
+Documents/Deliverable_1/~$wap_Deliverable_1_UserStory.docx
