--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.6.6",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.7",
     "firebaseui": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
