--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.7",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-google-button": "^0.7.2",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
