--- a/Development/cswap/.env.local
+++ b/Development/cswap/.env.local
@@ -5,3 +5,5 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=cswap-c394f.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=881473991107
 REACT_APP_FIREBASE_APP_ID=1:881473991107:web:42cb3df58fa4e008ab4d76
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-4CLGQTRKM1
+CAPTCHA_SITE_KEY=6Lev364eAAAAAATr86taI5SQXVmuoctviwTvv-hS
+CAPTCHA_SECRET_KEY=6Lev364eAAAAAMdEOJG58RhR1hHVZx5cY7gK7BXR
