--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-google-button": "^0.7.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
