--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -15,6 +16,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.7",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -25,7 +27,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
