--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Documents/Deliverable_1/.~lock.CSwap_Deliverable_1_SRS_Template.doc#
 Documents/Deliverable_1/~$CSwap_Deliverable_1_ProductBacklog_1.xlsx
 Documents/Deliverable_1/~$wap_Deliverable_1_UserStory.docx
 *.doc
+Documents/Deliverable_2/~$wap_Deliverable_2_SprintReview_2.docx
