--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -1,33 +1,22 @@
 {
-  "name": "cswap",
+  "name": "natural_logs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.6",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.8.3",
-    "babel-plugin-macros": "^3.1.0",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.6.7",
+    "@chakra-ui/react": "^1.8.7",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.10",
     "formik": "^2.2.9",
-    "framer-motion": "^6.2.8",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
-    "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^5.0.3",
-    "react-google-button": "^0.7.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^0.2.4",
+    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -37,7 +26,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
