--- a/Development/cswap/public/manifest.json
+++ b/Development/cswap/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "CSwap",
-  "name": "College Swap",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "48x48",
+      "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
