Updated ProductBacklog and SprintBacklog

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Documents/Deliverable_1/~$CSwap_Deliverable_1_ProductBacklog_1.xlsx
 Documents/Deliverable_1/~$wap_Deliverable_1_UserStory.docx
 *.doc
 Documents/Deliverable_2/~$wap_Deliverable_2_SprintReview_2.docx
+Documents/Deliverable_4/~$CSwap_Deliverable_4_ProductBacklog.xlsx
+Documents/Deliverable_4/~$CSwap_Deliverable_4_SprintBacklog.xlsx
