--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
+    "react-image-picker": "^1.1.1",
+    "react-images-uploading": "^3.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
