--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -18,6 +18,8 @@
     "react-images-uploading": "^3.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "stream-chat": "^6.4.0",
+    "stream-chat-react": "^8.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
