--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Documents/Deliverable_1/~$wap_Deliverable_1_UserStory.docx
 Documents/Deliverable_2/~$wap_Deliverable_2_SprintReview_2.docx
 Documents/Deliverable_4/~$CSwap_Deliverable_4_ProductBacklog.xlsx
 Documents/Deliverable_4/~$CSwap_Deliverable_4_SprintBacklog.xlsx
+Documents/Deliverable_4/CSwap_Deliverable_4_Configuration_Management_Plan.docx
