--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Documents/Deliverable_2/~$wap_Deliverable_2_SprintReview_2.docx
 Documents/Deliverable_4/~$CSwap_Deliverable_4_ProductBacklog.xlsx
 Documents/Deliverable_4/~$CSwap_Deliverable_4_SprintBacklog.xlsx
 Documents/Deliverable_4/CSwap_Deliverable_4_Configuration_Management_Plan.docx
+Documents/Deliverable_6/~$CSwap_Deliverable_6_ProductBacklog.xlsx
