--- a/Development/cswap/package.json
+++ b/Development/cswap/package.json
@@ -6,7 +6,6 @@
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.7",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
@@ -46,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.1.1",
+    "enzyme": "^3.11.0",
+    "jest": "^28.0.0",
+    "react-test-renderer": "^18.0.0"
   }
 }
