--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Documents/Deliverable_4/~$CSwap_Deliverable_4_ProductBacklog.xlsx
 Documents/Deliverable_4/~$CSwap_Deliverable_4_SprintBacklog.xlsx
 Documents/Deliverable_4/CSwap_Deliverable_4_Configuration_Management_Plan.docx
 Documents/Deliverable_6/~$CSwap_Deliverable_6_ProductBacklog.xlsx
+COS420_Project.code-workspace
